# Do-do

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.nix  rxconfig.py
.idx/: dev.nix
Do_do/: Do_do.py
Do_do/components/: sidebar.py
Do_do/pages/: dashboard.py  index.py  settings.py
Do_do/templates/: template.py
backend/: package-lock.json  package.json
