[tool.poetry]
name = "Do-do"
version = "0.1.0"
description = "Do-do is a to-do app that helps you get things done, even if you don't have time to do them yourself. With Do-do, you can create and share to-do lists with others, and find people who are interested in helping you complete your tasks." 
authors = ["olugbemiopedepo@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"